<resources>
    <string name="app_name">LayoutDemo</string>
    <string name="subtitle4cons">current page is constraint constraint constraint constraint layout</string>
    <string name="btn1">linear layout</string>
    <string name="btn2">relative layout</string>
    <string name="btn3">table layout</string>
    <string name="btn4">frame layout</string>
    <string name="btn5">absol layout</string>
    <string name="btn6">gridd layout</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>